@@ -2892,13 +2892,11 @@ public enum GameMap {
             ) {
                 @Override
                 public float getSpawnCountMultiplier(int playerCount) {
-                    switch (playerCount) {
-                        case 3:
-                            return 1.25f;
-                        case 4:
-                            return 1.5f;
-                    }
-                    return 1;
+                    return switch (playerCount) {
+                        case 3 -> 1.25f;
+                        case 4 -> 1.5f;
+                        default -> 1;
+                    };
                 }
             });
             options.add(new WinAfterTimeoutOption(600, 50, "spec"));
@@ -3277,13 +3275,11 @@ public enum GameMap {
             ) {
                 @Override
                 public float getSpawnCountMultiplier(int playerCount) {
-                    switch (playerCount) {
-                        case 3:
-                            return 1.25f;
-                        case 4:
-                            return 1.5f;
-                    }
-                    return 1;
+                    return switch (playerCount) {
+                        case 3 -> 1.25f;
+                        case 4 -> 1.5f;
+                        default -> 1;
+                    };
                 }
             });
             options.add(new WinAfterTimeoutOption(600, 50, "spec"));
@@ -3550,7 +3546,7 @@ public enum GameMap {
         this.lobbyCountdown = lobbyCountdown;
         this.fileName = fileName;
         this.numberOfMaps = numberOfMaps;
-        this.gameMode = Collections.unmodifiableList(Arrays.asList(gameMode));
+        this.gameMode = List.of(gameMode);
     }
 
     /**
